# libsql-nvim

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md
derive/: Cargo.toml
derive/src/: lib.rs
lua/libsql/: _meta.lua  init.lua
src/: conn.rs  db.rs  error.rs  lib.rs  rows.rs  ser.rs  statement.rs  wrap.rs
