[package]
name = "libsql-lua"
version = "0.1.0"
edition = "2021"

[lib]
name = "sql_lua"        # name will already be prefixed with lib
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.81"
libsql = "0.3.2"
mlua = { version = "0.9.6", features = [
  "module",
  "macros",
  "serialize",
  "async",
  "send",
  "luajit",
] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
tokio = { version = "1.35.1", features = ["full"] }

# chrono = "0.4.37"
# reqwest = { version = "0.12.2", features = ["json"] }
