[package]
name = "libsql-nvim"
version = "0.1.0"
edition = "2021"

[lib]
name = "sql_lua"        # name will already be prefixed with lib
crate-type = ["cdylib"]

[workspace]
members = ["derive"]

[workspace.dependencies]
libsql = "0.3.2"
mlua = { version = "0.9.6", features = [
  "module",
  "macros",
  "serialize",
  "async",
  # "send",
  "luajit",
  "unstable",
] }
nvim-oxi = { version = "0.4.2", features = ["neovim-nightly", "libuv", "mlua"] }
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"

[dependencies]
libsql = { workspace = true }
mlua = { workspace = true }
nvim-oxi = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
libsql-nvim-derive = { path = "derive" }
